sourceCompatibility = 17

dependencies {
	implementation 'io.netty:netty-all:4.1.75.Final'
	implementation 'org.springframework:spring-aop:5.3.17'
	implementation 'commons-net:commons-net:3.8.0'
}
